src/index.css
html,
body {
  padding: 0;
  margin: 0;
}

/* 367px */

html {
  background-color: #270237;
  /* background-image: url(/img/stars.svg), url(/img/asteriod2.svg),
    url(/img/asteriod1.svg), url(/img/bg.svg); */

  &:before {
    content: '';
    position: fixed;
    background-position: bottom, bottom;
    background-image: url(/img/stars.svg), url(/img/bg.svg), linear-gradient(to bottom, #270237, #1b3454, #2d4a69, #3f607f, #537895);
    opacity: 0.6;
    background-size: cover;
    /*min-height: 100%;*/
    width: 100%;
    height: 100%;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;


  }
}

body {
  position: relative;
  max-width: 900px;
  margin: 0 auto;
  padding: 20px;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 24px;
  font-weight: 300;

  /* background: #212121; */
  color: #dfdfdf;

  &:before {
    content: '';
    position: absolute;
    left: -150px;
    width: 100px;
    height: 200px;
    background-image: url(/img/asteriod2.svg);
    background-repeat: no-repeat;
    background-size: 100px;
  }

  &:after {
    content: '';
    position: absolute;
    right: -150px;
    width: 100px;
    height: 200px;
    top: 200px;
    background-image: url(/img/asteriod1.svg);
    background-repeat: no-repeat;
    background-size: 100px;
  }
}

h1 {
  font-size: 36px;
}

h2 {
  font-size: 28px;
  margin-top: 40px;
}

h1, h2, h3, h4 {
  font-family: 'Source Code Pro', monospace;
  position: relative;
}

strong {
  color: white;
}

a {
  color: #f2aa74;
  text-decoration: none;
}

header {
  background-color: rgba(255, 255, 255, 0.2);
  padding: 0.4em 1.4em;
  border-radius: 1em;
  box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.2);
  margin: 0 0 2em 0;
  transition: all 3s ease-in-out;
  display: flex;

  @media only screen and (width < 48em) {
    display: block;
    margin: 0 auto;
  }
}

header img {
  margin: 0 auto;
  display: none;
  height: 0;
  width: 0;

  @media only screen and (width > 48em) {
    display: block;
    height: auto;
    width: 25%;
  }
}

header img, h1, h2 {
  display: inline-block;
}

header h1 {
  @media only screen and (width < 48em) {
    margin: 0 auto;
  }
}

header:hover {
  transform: scale(1.05);
}

header h2 {
  margin-left: 1.2em;
  padding-bottom: 1.4em;

  @media only screen and (width < 48em) {
    margin-left: 0.6em;
    padding-bottom: 0.2em;
  }
}

footer {
  text-align: center;
  margin: 2em 0;
}

.container {
  padding: 1em;
}

.name {
  text-align: center;
  font-weight: 800;
  box-shadow: 0.2em 0.2em 0.2em rgba(0, 0, 0, 0.2);
  padding: 0.6em;
  transition: all 3s ease-in-out;
  margin: 0.5em 10em;
  background-color: rgba(119, 105, 77, 0.5);
  border-radius: 0.3em;
}

.name:hover {
  transform: scale(1.05);
}

.more {
  font-size: 80%;
}

.is-hazard .hazard {
  color: red;
  font-weight: bold;
  animation: hazard 2s infinite;
  padding: 2px 4px;
}

.no-hazard .hazard {
  color: green;
  font-weight: bold;
  animation: noHazard 3s infinite;
  padding: 2px 4px;
}

hr,
.no-hazard,
.is-hazard {
  border: 0;
  border-bottom: 4px solid #b077c8;
}

@keyframes hazard {
  0% {
    color: red;
    background: inherit;
  }

  50% {
    color: inherit;
    background: red;
  }

  100% {
    color: red;
    background: inherit;
  }
}

@keyframes noHazard {
  0% {
    color: green;
    background: inherit;
  }

  50% {
    color: inherit;
    background: green;
  }

  100% {
    color: green;
    background: inherit;
  }
}

/* ======== Tooltip styling ======== */

.tooltip {
  position: relative;
  display: inline-block;
  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  width: 15em;
  background-color: #555;
  color: #fff;
  text-align: center;
  padding: 0.6em;
  border-radius: 6px;

  /* Position the tooltip text */
  position: absolute;
  z-index: 1;
  bottom: 125%;
  left: 50%;
  margin-left: -60px;

  /* Fade in tooltip */
  opacity: 0;
  transition: opacity 0.5s;
}

/* Tooltip arrow */
.tooltip .tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 15%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: #555 transparent transparent transparent;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
  visibility: visible;
  opacity: 1;
}

